deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osrm-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osrm-backend
  template:
    metadata:
      labels:
        app: osrm-backend
    spec:
      containers:
        - name: osrm-backend
          image: ghcr.io/project-osrm/osrm-backend
          command: ["osrm-routed", "--algorithm", "mld", "/data/france-latest.osrm"]
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: osrm-data
              mountPath: /data
          resources:
            limits:
              cpu: 8000m
              memory: 8Gi
      volumes:
        - name: osrm-data
          emptyDir: {}
