service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osrm-backend
spec:
  selector:
    app: osrm-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
